# TuringTestGame

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js
app/: __init__.py  config.py  db.py  main.py
app/apps/: __init__.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/models/: __init__.py  admin_user.py  ai_model.py  backup_record.py  config_item.py  game_player.py  game_room.py  game_round.py  operation_log.py  prompt_templates.py  role.py  vote_record.py
app/services/: __init__.py  admin_user_service.py  ai_chat_service.py  ai_models_service.py  auth_service.py  backup_scheduler.py  backup_service.py  cleanup_service.py  cloud_storage.py  config_service.py  csrf_service.py  game_manager.py  game_room_service.py  log_service.py  permission_decorator.py  permission_service.py  prompt_templates_service.py  rate_limit_service.py  redis_service.py  role_service.py  validators.py
deploy/dev/: docker-compose.yml
deploy/product/: Dockerfile  docker-compose.yml
docs/: SECONDARY_DEVELOPMENT_GUIDE.md  TURING_GAME_DEVELOPMENT.md
refs/: .gitkeep
scripts/: generate_admin_module.py
tests/: conftest.py
tests/e2e/: conftest.py  test_admin_login_flow.py  test_game_bonus_scoring_flow.py  test_game_network_recovery.py  test_game_room_list_join.py  test_game_three_players_flow.py  test_game_two_players_flow.py  test_permission_guardrails.py  test_prompt_templates_flow.py
tests/integration/: conftest.py  test_config_and_logs.py  test_rbac_role_transfer.py
(+86 files in other folders)
